Fix linting and update Dockerfile

--- a/apps/axa-aiaui-app/Dockerfile
+++ b/apps/axa-aiaui-app/Dockerfile
@@ -1,12 +1,37 @@
 # apps/axa-aiaui-app/Dockerfile
 
 FROM node:20-alpine AS builder
+
 WORKDIR /app
 COPY . .
-RUN npm install && npm run build
 
+# Declare all build args
+ARG NEXT_PUBLIC_FIREBASE_API_KEY
+ARG NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+ARG NEXT_PUBLIC_FIREBASE_PROJECT_ID
+ARG NEXT_PUBLIC_FIREBASE_APP_ID
+ARG NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+ARG NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+
+# Expose them as env variables for Next.js build
+ENV NEXT_PUBLIC_FIREBASE_API_KEY=$NEXT_PUBLIC_FIREBASE_API_KEY
+ENV NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=$NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+ENV NEXT_PUBLIC_FIREBASE_PROJECT_ID=$NEXT_PUBLIC_FIREBASE_PROJECT_ID
+ENV NEXT_PUBLIC_FIREBASE_APP_ID=$NEXT_PUBLIC_FIREBASE_APP_ID
+ENV NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=$NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+ENV NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=$NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+
+RUN npm ci
+RUN npm run build
+
+# --- Runtime Stage ---
 FROM node:20-alpine
+
 WORKDIR /app
 COPY --from=builder /app ./
+
+ENV NODE_ENV=production
+
 EXPOSE 3000
-CMD ["npm", "start"]
+
+CMD ["npx", "next", "start"]
