--- a/.github/workflows/deploy-axa-aiaui-app.yml
+++ b/.github/workflows/deploy-axa-aiaui-app.yml
@@ -31,9 +31,18 @@ jobs:
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker europe-west1-docker.pkg.dev
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Docker Image with Firebase Env Vars
         run: |
-          docker build -t europe-west1-docker.pkg.dev/spartan-acrobat-462612-j1/axa-aiaui-docker/axa-aiaui-app:${{ github.sha }} ./apps/axa-aiaui-app
+          docker build \
+            --build-arg NEXT_PUBLIC_FIREBASE_API_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }} \
+            --build-arg NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }} \
+            --build-arg NEXT_PUBLIC_FIREBASE_PROJECT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }} \
+            --build-arg NEXT_PUBLIC_FIREBASE_APP_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }} \
+            --build-arg NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }} \
+            --build-arg NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }} \
+            -t europe-west1-docker.pkg.dev/spartan-acrobat-462612-j1/axa-aiaui-docker/axa-aiaui-app:${{ github.sha }} \
+            ./apps/axa-aiaui-app
+
           docker push europe-west1-docker.pkg.dev/spartan-acrobat-462612-j1/axa-aiaui-docker/axa-aiaui-app:${{ github.sha }}
 
       - name: Deploy to Cloud Run
