--- a/apps/axa-aiaui-app/package.json
+++ b/apps/axa-aiaui-app/package.json
@@ -19,12 +19,14 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "csv-parser": "^3.2.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.515.0",
@@ -34,6 +36,7 @@
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
+    "unique-names-generator": "^4.7.1",
     "zod": "^3.25.64"
   },
   "devDependencies": {
