--- a/apps/axa-aiaui-app/package.json
+++ b/apps/axa-aiaui-app/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
