--- a/apps/axa-aiaui-app/package.json
+++ b/apps/axa-aiaui-app/package.json
@@ -35,6 +35,7 @@
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "unique-names-generator": "^4.7.1",
